cambio de nombre

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,5 @@ Imports:
     stats,
     tibble
 Remotes:
-    git::https://github.com/fawda123/rStrava,
-    git::https://github.com/grimbough/FITfileR
+    fawda123/rStrava,
+    grimbough/FITfileR
