--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,11 @@ export(ele_correction_point)
 export(ele_correction_raster)
 export(ele_correction_raster_local)
 export(match_stream)
+export(read_stream_file)
+export(rename_stream)
 export(rolling_window)
 export(smooth_stream)
 export(split_stream)
+export(strava_to_stream_df)
 export(writeGPX)
 importFrom(magrittr,"%>%")
