--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,11 @@ export(ele_correction_point)
 export(ele_correction_raster)
 export(ele_correction_raster_local)
 export(match_stream)
+export(read_gpx)
 export(read_stream)
-export(uniform_stream)
 export(rolling_window)
 export(smooth_stream)
 export(split_stream)
-export(writeGPX)
+export(uniform_stream)
+export(write_gpx)
 importFrom(magrittr,"%>%")
