update agg function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(read_gpx)
 export(read_stream)
 export(rolling_window)
 export(smooth_stream)
-export(split_stream)
+export(summarise_stream)
 export(uniform_stream)
 export(write_gpx)
+export(write_kml)
+export(write_stream)
 importFrom(magrittr,"%>%")
